@@ -7,6 +7,10 @@
 - mosquitto_pub can now read stdin and send each line as a message.
 - mosquitto will now run VACUUM on the persistent database on exit, instead of
   the in-memory database.
+- Implement a more efficient database design, so that only one copy of each
+  message is held in the database, rather than one per subscribed client.
+- Add the store_cleanup_interval config option for dealing with the internal
+  message store.
 
 0.5.4 - 20100311
 ================
